--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -30,12 +30,12 @@
       placeholder="Password"
       required
     />
+  </div>
 
-    <div class="d-flex justify-content-between">
-      <button type="button" class="btn btn-primary" (click)="login()">
-        <em class="fas fa-sign-in-alt">&nbsp;Sign in</em>
-      </button>
-    </div>
+  <div class="d-flex justify-content-between mb-3">
+    <button type="button" class="btn btn-primary" (click)="login()">
+      <em class="fas fa-sign-in-alt">&nbsp;Sign in</em>
+    </button>
 
     <div>
       Don't have an account?&nbsp;
