--- a/src/app/modules/book/components/book-card/book-card.component.html
+++ b/src/app/modules/book/components/book-card/book-card.component.html
@@ -1,20 +1,62 @@
-<div class="card" style="width: 20rem">
-  <img height="200px" [src]="bookCover" alt="..." class="card-img-top" />
-  <div class="card-body overflow-scroll">
-    <h5 class="card-title fs-6 text-nowrap fw-bold mb-1">
-      <i class="fa-solid fa-book"> &nbsp;{{ book.title }} </i>
+<div
+  class="card"
+  style="width: 20rem; border: 1px solid #ddd; border-radius: 8px"
+>
+  <img
+    height="200px"
+    [src]="bookCover"
+    alt="Book Cover"
+    class="card-img-top"
+    style="
+      object-fit: cover;
+      border-top-left-radius: 8px;
+      border-top-right-radius: 8px;
+    "
+  />
+  <div class="card-body">
+    <h5 class="card-title fs-6 fw-bold text-truncate mb-2">
+      <i class="fa-solid fa-book"></i> &nbsp;{{ book.title || "No Title" }}
     </h5>
 
-    <h5 class="card-subtitle fs-6 text-secondary mb-1">
-      <i class="fa-solid fa-user-check"> &nbsp;{{ book.authorName }} </i>
-    </h5>
+    <p class="card-subtitle fs-6 text-muted mb-2">
+      <i class="fa-solid fa-user-check"></i> &nbsp;{{
+        book.authorName || "Unknown Author"
+      }}
+    </p>
 
-    <h6 class="card-subtitle fs-6 text-secondary mb-1">
-      <i class="fas fa-code"> &nbsp;{{ book.isbn }} </i>
-    </h6>
+    <p class="card-subtitle fs-6 text-muted mb-2 text-truncate">
+      <i class="fas fa-code"></i> &nbsp;ISBN: {{ book.isbn || "N/A" }}
+    </p>
 
-    <h6 class="card-subtitle fs-6 text-secondary mb-1">
-      <i class="fas fa-user"> &nbsp;{{ book.owner }} </i>
-    </h6>
+    <p class="card-subtitle fs-6 text-muted mb-0 text-truncate">
+      <i class="fas fa-user"></i> &nbsp;Owner: {{ book.owner || "N/A" }}
+    </p>
+    <hr />
+    <p class="card-text text-muted mb-0 synopsis">
+      {{ book.synopsis || "No synopsis available." }}
+    </p>
+    <div
+      class="card-footer d-flex gap-2 justify-content-between align-items-center"
+    >
+      <div class="d-flex gap-2">
+        <app-rating [rating]="book.rate || 0"></app-rating>
+        <span class="fw-bold" *ngIf="book.rate || 0 > 0">
+          {{ book.rate }}
+        </span>
+      </div>
+      <div class="d-flex gap-2" *ngIf="!manage">
+        <i
+          (click)="onShowDetails()"
+          class="fas fa-circle-info text-primary"
+        ></i>
+        <i (click)="onBorrow()" class="fas fa-list-check text-primary"></i>
+        <i (click)="onAddToWaitingList()" class="fas fa-heart text-danger"></i>
+      </div>
+      <div class="d-flex gap-2" *ngIf="manage">
+        <i (click)="onEdit()" class="fas fa-edit text-success"></i>
+        <i (click)="onShare()" class="fas fa-share-nodes text-primary"></i>
+        <i (click)="onArchive()" class="fas fa-archive text-danger"></i>
+      </div>
+    </div>
   </div>
 </div>
