--- a/src/app/modules/book/components/rating/rating.component.html
+++ b/src/app/modules/book/components/rating/rating.component.html
@@ -5,7 +5,7 @@
   <ng-container *ngIf="hasHalfStar">
     <i class="fas fa-star-half-alt text-warning"></i>
   </ng-container>
-  <ng-container *ngFor="let _ of [].constructor(fullStars); let i = index">
-    <i class="fas fa-star text-warning"></i>
+  <ng-container *ngFor="let _ of [].constructor(emptyStars); let i = index">
+    <i class="far fa-star"></i>
   </ng-container>
 </div>
