--- a/src/app/modules/book/pages/book-list/book-list.component.html
+++ b/src/app/modules/book/pages/book-list/book-list.component.html
@@ -5,3 +5,71 @@
   <app-book-card [book]="book" *ngFor="let book of bookResponse.content">
   </app-book-card>
 </div>
+
+<div class="d-flex justify-content-center mt-3">
+  <nav aria-label="Page navigation">
+    <ul class="pagination">
+      <li class="page-item">
+        <a
+          class="page-link"
+          href="javascript:void(0)"
+          aria-label="Previous"
+          (click)="goToFirstPage()"
+          [class.disabled]="page === 0"
+        >
+          <i class="fa-solid fa-angles-left"></i>
+        </a>
+      </li>
+      <li class="page-item">
+        <a
+          class="page-link"
+          href="javascript:void(0)"
+          aria-label="Previous"
+          (click)="goToPreviousPage()"
+          [class.disabled]="page === 0"
+        >
+          <i class="fa-solid fa-angle-left"></i>
+        </a>
+      </li>
+      <li
+        class="page-item"
+        *ngFor="
+          let _ of [].constructor(bookResponse.totalPages);
+          let pageIndex = index
+        "
+      >
+        <a
+          class="page-link"
+          href="javascript:void(0)"
+          aria-label="Previous"
+          (click)="goToPage(pageIndex)"
+          [class.active]="pageIndex === page"
+        >
+          {{ pageIndex + 1 }}
+        </a>
+      </li>
+      <li class="page-item">
+        <a
+          class="page-link"
+          href="javascript:void(0)"
+          aria-label="Next"
+          (click)="goToNextPage()"
+          [class.disabled]="isLastPage"
+        >
+          <i class="fa-solid fa-angle-right"></i>
+        </a>
+      </li>
+      <li class="page-item">
+        <a
+          class="page-link"
+          href="javascript:void(0)"
+          aria-label="Next"
+          (click)="goToLastPage()"
+          [class.disabled]="isLastPage"
+        >
+          <i class="fa-solid fa-angles-right"></i>
+        </a>
+      </li>
+    </ul>
+  </nav>
+</div>
