--- a/src/app/modules/book/pages/book-list/book-list.component.html
+++ b/src/app/modules/book/pages/book-list/book-list.component.html
@@ -1,8 +1,20 @@
 <h3>Books list</h3>
+<div
+  *ngIf="message"
+  class="alert"
+  [class.alert-danger]="level == 'error'"
+  [class.alert-success]="level == 'success'"
+>
+  {{ message }}
+</div>
 <hr />
 
 <div class="d-flex justify-content-start gap-2 flex-wrap">
-  <app-book-card [book]="book" *ngFor="let book of bookResponse.content">
+  <app-book-card
+    [book]="book"
+    (borrow)="borrowBook($event)"
+    *ngFor="let book of bookResponse.content"
+  >
   </app-book-card>
 </div>
 
