--- a/src/app/modules/book/pages/my-books/my-books.component.html
+++ b/src/app/modules/book/pages/my-books/my-books.component.html
@@ -1,1 +1,88 @@
-<p>my-books works!</p>
+<h3>My Books</h3>
+
+<hr />
+<div class="d-flex justify-content-end mb-3">
+  <a class="btn btn-outline-primary" routerLink="/books/manage">
+    <i class="fas fa-plus"></i> &nbsp;Add Book
+  </a>
+</div>
+
+<div class="d-flex justify-content-start gap-2 flex-wrap">
+  <app-book-card
+    [book]="book"
+    [manage]="true"
+    (archive)="archiveBook($event)"
+    (share)="shareBook($event)"
+    (edit)="editBook($event)"
+    *ngFor="let book of bookResponse.content"
+  >
+  </app-book-card>
+</div>
+
+<div class="d-flex justify-content-center mt-3">
+  <nav aria-label="Page navigation">
+    <ul class="pagination">
+      <li class="page-item">
+        <a
+          class="page-link"
+          href="javascript:void(0)"
+          aria-label="Previous"
+          (click)="goToFirstPage()"
+          [class.disabled]="page === 0"
+        >
+          <i class="fa-solid fa-angles-left"></i>
+        </a>
+      </li>
+      <li class="page-item">
+        <a
+          class="page-link"
+          href="javascript:void(0)"
+          aria-label="Previous"
+          (click)="goToPreviousPage()"
+          [class.disabled]="page === 0"
+        >
+          <i class="fa-solid fa-angle-left"></i>
+        </a>
+      </li>
+      <li
+        class="page-item"
+        *ngFor="
+          let _ of [].constructor(bookResponse.totalPages);
+          let pageIndex = index
+        "
+      >
+        <a
+          class="page-link"
+          href="javascript:void(0)"
+          aria-label="Previous"
+          (click)="goToPage(pageIndex)"
+          [class.active]="pageIndex === page"
+        >
+          {{ pageIndex + 1 }}
+        </a>
+      </li>
+      <li class="page-item">
+        <a
+          class="page-link"
+          href="javascript:void(0)"
+          aria-label="Next"
+          (click)="goToNextPage()"
+          [class.disabled]="isLastPage"
+        >
+          <i class="fa-solid fa-angle-right"></i>
+        </a>
+      </li>
+      <li class="page-item">
+        <a
+          class="page-link"
+          href="javascript:void(0)"
+          aria-label="Next"
+          (click)="goToLastPage()"
+          [class.disabled]="isLastPage"
+        >
+          <i class="fa-solid fa-angles-right"></i>
+        </a>
+      </li>
+    </ul>
+  </nav>
+</div>
