feat: edit book

--- a/src/app/modules/book/pages/manage-book/manage-book.component.html
+++ b/src/app/modules/book/pages/manage-book/manage-book.component.html
@@ -75,6 +75,7 @@
           <input
             [(ngModel)]="bookRequest.shareable"
             type="checkbox"
+            name="shareable"
             class="form-check-input"
             id="shareable"
           />
