feat: share archive

--- a/src/app/modules/book/components/book-card/book-card.component.html
+++ b/src/app/modules/book/components/book-card/book-card.component.html
@@ -1,6 +1,8 @@
 <div
-  class="card"
+  class="card border-3"
   style="width: 20rem; border: 1px solid #ddd; border-radius: 8px"
+  [class.border-success]="book.shareable"
+  [class.border-warning]="book.archived"
 >
   <img
     height="200px"
