feat: borrowed books

--- a/src/app/modules/book/components/menu/menu.component.html
+++ b/src/app/modules/book/components/menu/menu.component.html
@@ -35,7 +35,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="my-borrowed-books">
+          <a class="nav-link" routerLink="borrowed-book-list">
             <i class="fas fa-list-check"></i>&nbsp;Borrowed books
           </a>
         </li>
